[package]
name = "nft-state"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], branch = "testnet"}
gmeta = { git = "https://github.com/gear-tech/gear.git", branch = "testnet", features = ["codegen"]}
gear-lib = { git = "https://github.com/gear-dapps/gear-lib.git", tag = "0.3.5" }
nft-io = { path = "../io" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", branch = "testnet", features = ["metawasm"] }